--- a/src/com/pos/account/view/login.fxml
+++ b/src/com/pos/account/view/login.fxml
@@ -13,85 +13,91 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="318.0" prefWidth="700.0" style="-fx-background-color: #133D3D;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.account.controller.LoginController">
+
+<AnchorPane prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #000;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.account.controller.LoginCtrl">
    <children>
-      <AnchorPane layoutY="1.0" prefHeight="310.0" prefWidth="700.0">
+      <Pane layoutX="274.0" layoutY="191.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="339.0" prefWidth="706.0" style="-fx-background-color: #133D3D;">
          <children>
-            <ImageView fitHeight="318.0" fitWidth="351.0" layoutX="349.0" opacity="0.43" pickOnBounds="true">
-               <image>
-                  <Image url="@../../../../../Assets/images/suppermarket.jpg" />
-               </image>
-            </ImageView>
-            <AnchorPane layoutX="351.0" opacity="0.84" prefHeight="318.0" prefWidth="351.0" style="-fx-background-color: #000;">
+            <AnchorPane layoutY="1.0" prefHeight="310.0" prefWidth="700.0">
                <children>
-                  <ImageView fitHeight="44.0" fitWidth="48.0" layoutX="294.0" layoutY="270.0" pickOnBounds="true">
+                  <ImageView fitHeight="338.0" fitWidth="358.0" layoutX="349.0" opacity="0.43" pickOnBounds="true">
                      <image>
-                        <Image url="@../../../../../Assets/images/dic.png" />
+                        <Image url="@../../../../../Assets/images/suppermarket.jpg" />
                      </image>
                   </ImageView>
-               </children></AnchorPane>
-            <Label layoutX="388.0" layoutY="89.0" prefHeight="142.0" prefWidth="301.0" text="with mama ross Everything you need is Easy and fast no&#10;need for stress, get Anything you want just at your &#10;service , start shopping  today! " textFill="#ebe8e8">
-               <font>
-                  <Font name="System Italic" size="12.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER" layoutX="368.0" layoutY="29.0" prefHeight="72.0" prefWidth="301.0" text="Welcome to Mama Ross !&#10;   suppermarket" textFill="#e8e8e8">
-               <font>
-                  <Font name="Georgia Bold Italic" size="18.0" />
-               </font>
-            </Label>
-            <AnchorPane layoutY="-1.0" opacity="0.9" prefHeight="318.0" prefWidth="351.0" style="-fx-background-color: #000;">
-               <children>
-                  <TextField fx:id="userName" layoutX="30.0" layoutY="110.0" prefHeight="44.0" prefWidth="272.0" promptText="Enter User Name" style="-fx-background-color: #fff;">
+                  <AnchorPane layoutX="351.0" opacity="0.84" prefHeight="339.0" prefWidth="358.0" style="-fx-background-color: #000;">
+                     <children>
+                        <ImageView fitHeight="44.0" fitWidth="48.0" layoutX="294.0" layoutY="270.0" pickOnBounds="true">
+                           <image>
+                              <Image url="@../../../../../Assets/images/dic.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </AnchorPane>
+                  <Label layoutX="388.0" layoutY="89.0" prefHeight="142.0" prefWidth="301.0" text="with mama ross Everything you need is Easy and fast no&#10;need for stress, get Anything you want just at your &#10;service , start shopping  today! " textFill="#ebe8e8">
                      <font>
-                        <Font name="Georgia" size="12.0" />
+                        <Font name="System Italic" size="12.0" />
                      </font>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                     <padding>
-                        <Insets left="27.0" />
-                     </padding>
-                  </TextField>
-                  <TextField fx:id="password" accessibleRole="TEXT" layoutX="31.0" layoutY="172.0" opacity="0.99" prefHeight="44.0" prefWidth="272.0" promptText="Enter Password" style="-fx-background-color: #fff;">
-                     <font>
-                        <Font name="Georgia" size="12.0" />
-                     </font>
-                     <padding>
-                        <Insets left="27.0" />
-                     </padding>
-                  </TextField>
-                  <Button fx:id="btnLogIn" contentDisplay="CENTER" layoutX="31.0" layoutY="239.0" mnemonicParsing="false" onAction="#loginAccount" opacity="0.95" prefHeight="44.0" prefWidth="104.0" style="-fx-background-color: #fff;" text="Login" textAlignment="JUSTIFY" textFill="#020529" textOverrun="CLIP">
-                     <font>
-                        <Font name="Georgia Bold Italic" size="14.0" />
-                     </font>
-                  </Button>
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="82.0" layoutY="35.0" opacity="0.98" prefHeight="43.0" prefWidth="154.0" text="Sign in ">
-                     <font>
-                        <Font name="System Bold Italic" size="36.0" />
-                     </font>
-                     <textFill>
-                        <LinearGradient cycleMethod="REPEAT" endX="0.7333333333333334" endY="0.9952380952380953" startX="0.3476190476190476" startY="0.2571428571428571">
-                           <stops>
-                              <Stop color="#e0e1ee" />
-                              <Stop color="#020529" offset="1.0" />
-                           </stops>
-                        </LinearGradient>
-                     </textFill>
                   </Label>
-                  <ImageView fitHeight="19.0" fitWidth="22.0" layoutX="33.0" layoutY="122.0" opacity="0.49" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../../../Assets/images/54091415-icono-de-la-barra-de-la-trama-de-usuario-para-el-diseño-de-software-el-estilo-es-el-símbolo-gradiente-ico.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="19.0" fitWidth="22.0" layoutX="35.0" layoutY="183.0" opacity="0.59" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../../../Assets/images/pass.png" />
-                     </image>
-                  </ImageView>
+                  <Label alignment="CENTER" layoutX="368.0" layoutY="29.0" prefHeight="72.0" prefWidth="301.0" text="Welcome to Mama Ross !&#10;   suppermarket" textFill="#e8e8e8">
+                     <font>
+                        <Font name="Georgia Bold Italic" size="18.0" />
+                     </font>
+                  </Label>
+                  <AnchorPane layoutY="-1.0" opacity="0.9" prefHeight="339.0" prefWidth="351.0" style="-fx-background-color: #000;">
+                     <children>
+                        <TextField fx:id="userName" layoutX="30.0" layoutY="110.0" prefHeight="44.0" prefWidth="272.0" promptText="Enter User Name" style="-fx-background-color: #fff;">
+                           <font>
+                              <Font name="Georgia" size="12.0" />
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <padding>
+                              <Insets left="27.0" />
+                           </padding>
+                        </TextField>
+                        <TextField fx:id="password" accessibleRole="TEXT" layoutX="31.0" layoutY="172.0" opacity="0.99" prefHeight="44.0" prefWidth="272.0" promptText="Enter Password" style="-fx-background-color: #fff;">
+                           <font>
+                              <Font name="Georgia" size="12.0" />
+                           </font>
+                           <padding>
+                              <Insets left="27.0" />
+                           </padding>
+                        </TextField>
+                        <Button fx:id="btnLogIn" contentDisplay="CENTER" layoutX="31.0" layoutY="239.0" mnemonicParsing="false" onAction="#loginAccount" opacity="0.95" prefHeight="44.0" prefWidth="104.0" style="-fx-background-color: #fff;" text="Login" textAlignment="JUSTIFY" textFill="#020529" textOverrun="CLIP">
+                           <font>
+                              <Font name="Georgia Bold Italic" size="14.0" />
+                           </font>
+                        </Button>
+                        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="82.0" layoutY="35.0" opacity="0.98" prefHeight="43.0" prefWidth="154.0" text="Sign in ">
+                           <font>
+                              <Font name="System Bold Italic" size="36.0" />
+                           </font>
+                           <textFill>
+                              <LinearGradient cycleMethod="REPEAT" endX="0.7333333333333334" endY="0.9952380952380953" startX="0.3476190476190476" startY="0.2571428571428571">
+                                 <stops>
+                                    <Stop color="#e0e1ee" />
+                                    <Stop color="#020529" offset="1.0" />
+                                 </stops>
+                              </LinearGradient>
+                           </textFill>
+                        </Label>
+                        <ImageView fitHeight="19.0" fitWidth="22.0" layoutX="33.0" layoutY="122.0" opacity="0.49" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../Assets/images/54091415-icono-de-la-barra-de-la-trama-de-usuario-para-el-diseño-de-software-el-estilo-es-el-símbolo-gradiente-ico.jpg" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="19.0" fitWidth="22.0" layoutX="35.0" layoutY="183.0" opacity="0.59" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../Assets/images/pass.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </AnchorPane>
                </children>
             </AnchorPane>
          </children>
-      </AnchorPane>
+      </Pane>
    </children>
-</Pane>
+</AnchorPane>
