--- a/src/com/pos/org/view/dashboard.fxml
+++ b/src/com/pos/org/view/dashboard.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.org.controller.DashboardCtrl">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1370.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.org.controller.DashboardCtrl">
    <children>
       <VBox layoutY="67.0" prefHeight="733.0" prefWidth="207.0" style="-fx-background-color: #020529;">
          <children>
@@ -20,7 +20,18 @@
               <panes>
                 <TitledPane animated="false" prefHeight="0.0" prefWidth="215.0" styleClass="accordion" stylesheets="@style.css" text="Dashboard" textFill="#f2efef">
                   <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="85.0" prefWidth="205.0">
+                           <children>
+                              <VBox alignment="TOP_CENTER" layoutX="-1.0" prefHeight="119.0" prefWidth="207.0" style="-fx-background-color: #020529;">
+                                 <children>
+                                    <Hyperlink onAction="#sign_in" prefHeight="25.0" prefWidth="124.0" text="Sign In" textAlignment="RIGHT">
+                                       <graphic>
+                                          <FontAwesomeIconView fill="WHITE" glyphName="CIRCLE_THIN" size="10" stroke="#87766f" strokeWidth="2.0" wrappingWidth="15.0" />
+                                       </graphic>
+                                    </Hyperlink>
+                                 </children>
+                              </VBox>
+                           </children></AnchorPane>
                   </content>
                      <graphic>
                         <FontAwesomeIconView fill="#f58a08" glyphName="HOME" size="20" wrappingWidth="31.0" />
@@ -39,6 +50,22 @@
                      <font>
                         <Font size="14.0" />
                      </font>
+                     <content>
+                        <VBox alignment="TOP_CENTER" prefHeight="118.0" prefWidth="193.0" style="-fx-background-color: #020529;">
+                           <children>
+                              <Hyperlink onAction="#new_order" prefHeight="25.0" prefWidth="124.0" text="New Order" textAlignment="RIGHT">
+                                 <graphic>
+                                    <FontAwesomeIconView fill="WHITE" glyphName="CIRCLE_THIN" size="10" stroke="#87766f" strokeWidth="2.0" wrappingWidth="15.0" />
+                                 </graphic>
+                              </Hyperlink>
+                              <Hyperlink prefHeight="25.0" prefWidth="124.0" text="View Sales" textAlignment="RIGHT">
+                                 <graphic>
+                                    <FontAwesomeIconView fill="WHITE" glyphName="CIRCLE_THIN" size="10" stroke="#87766f" strokeWidth="2.0" wrappingWidth="15.0" />
+                                 </graphic>
+                              </Hyperlink>
+                           </children>
+                        </VBox>
+                     </content>
                   </TitledPane>
                   <TitledPane animated="false" layoutX="10.0" layoutY="70.0" prefHeight="0.0" prefWidth="215.0" styleClass="accordion" stylesheets="@style.css" text="Inventory" textFill="#f2efef">
                      <graphic>
@@ -192,7 +219,7 @@
             </Accordion>
          </children>
       </VBox>
-      <HBox prefHeight="68.0" prefWidth="1280.0" style="-fx-background-color: #f9f9f9;">
+      <HBox prefHeight="68.0" prefWidth="1370.0" style="-fx-background-color: #020529;">
          <children>
             <VBox alignment="BASELINE_LEFT" prefHeight="68.0" prefWidth="207.0" style="-fx-background-color: #020529;">
                <children>
@@ -204,6 +231,6 @@
                </children>
             </VBox>
          </children></HBox>
-      <AnchorPane fx:id="mainPane" layoutX="207.0" layoutY="71.0" prefHeight="733.0" prefWidth="1082.0" />
+      <AnchorPane fx:id="mainPane" layoutX="207.0" layoutY="71.0" prefHeight="733.0" prefWidth="1164.0" />
    </children>
 </AnchorPane>
