--- a/src/com/pos/order/view/CreateOrderView.fxml
+++ b/src/com/pos/order/view/CreateOrderView.fxml
@@ -1,8 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
+<AnchorPane prefHeight="545.0" prefWidth="759.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.order.controller.OrderTransactionCtrl">
+   <children>
+      <AnchorPane layoutX="-2.0" prefHeight="255.0" prefWidth="793.0">
+         <children>
+            <Pane layoutX="14.0" layoutY="3.0" prefHeight="90.0" prefWidth="774.0" style="-fx-border-color: #a8a8a8;">
+               <children>
+                  <Label layoutX="8.0" layoutY="3.0" text="PRODUCT SEARCH">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="7.0" layoutY="41.0" text="Product Name:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="productName" layoutX="112.0" layoutY="35.0" onAction="#searchProduct" prefHeight="36.0" prefWidth="648.0" promptText="Search for requested item" />
+               </children>
+            </Pane>
+            <TableView fx:id="prodSearchResultTbl" layoutX="14.0" layoutY="99.0" onMouseClicked="#addSelectedProductToCache" prefHeight="152.0" prefWidth="776.0" />
+         </children>
+      </AnchorPane>
+      <Pane layoutX="12.0" layoutY="267.0" prefHeight="275.0" prefWidth="775.0">
+         <children>
+            <TableView fx:id="purchaseListTbl" layoutX="2.0" layoutY="30.0" prefHeight="236.0" prefWidth="418.0">
+               <columns>
+                  <TableColumn prefWidth="75.0" text="C1" />
+                  <TableColumn prefWidth="75.0" text="C2" />
+               </columns>
+            </TableView>
+            <Label layoutX="4.0" layoutY="5.0" text="CART">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Pane layoutX="425.0" layoutY="30.0" prefHeight="237.0" prefWidth="345.0" style="-fx-border-color: #a8a8a8;">
+               <children>
+                  <Label layoutX="8.0" layoutY="3.0" text="PAYMENT">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="12.0" layoutY="29.0" text="Total Cost:">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="totalCostOfPurchase" disable="true" layoutX="107.0" layoutY="23.0" prefHeight="36.0" prefWidth="220.0" />
+                  <Label layoutX="11.0" layoutY="85.0" text="Amount Paid:">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="amtPaidForPurchase" layoutX="107.0" layoutY="79.0" prefHeight="36.0" prefWidth="219.0" />
+                  <Label layoutX="14.0" layoutY="140.0" text="Balance:">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="balanceOfPurchase" disable="true" layoutX="107.0" layoutY="132.0" prefHeight="36.0" prefWidth="218.0" />
+                  <Button layoutX="106.0" layoutY="181.0" mnemonicParsing="false" onAction="#dispatchPurchase" prefHeight="42.0" prefWidth="180.0" text="Dispatch Purchases" />
+               </children>
+            </Pane>
+         </children>
+      </Pane>
+   </children>
 </AnchorPane>
-
