--- a/src/com/pos/payment/view/PaymentView.fxml
+++ b/src/com/pos/payment/view/PaymentView.fxml
@@ -51,7 +51,7 @@
                                     <Font name="Lucida Sans Demibold" size="12.0" />
                                  </font>
                               </Text>
-                              <ComboBox fx:id="payment_type" layoutX="201.0" layoutY="345.0" prefHeight="33.0" prefWidth="167.0" promptText="--  Select Type  --" style="-fx-background-color: #fff;" />
+                              <ComboBox fx:id="payment_type" layoutX="201.0" layoutY="345.0" onAction="#callPaymentMethod" prefHeight="33.0" prefWidth="167.0" promptText="--  Select Type  --" style="-fx-background-color: #fff;" />
                               <Text fill="#e09b0d" layoutX="14.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Payment Info" textAlignment="CENTER" wrappingWidth="144.13671875">
                                  <font>
                                     <Font name="Lucida Sans Demibold" size="19.0" />
@@ -89,12 +89,12 @@
                                     <Font name="Lucida Sans Demibold" size="12.0" />
                                  </font>
                               </Text>
-                              <TextField fx:id="t_time" disable="true" editable="false" layoutX="383.0" layoutY="77.0" prefHeight="25.0" prefWidth="131.0" style="-fx-background-color: gray;">
+                              <TextField fx:id="order_date" disable="true" editable="false" layoutX="383.0" layoutY="77.0" prefHeight="25.0" prefWidth="131.0" style="-fx-background-color: gray;">
                                  <font>
                                     <Font name="Lucida Sans Regular" size="13.0" />
                                  </font>
                               </TextField>
-                              <TextField fx:id="t_date" disable="true" editable="false" layoutX="383.0" layoutY="108.0" prefHeight="25.0" prefWidth="130.0" style="-fx-background-color: gray;">
+                              <TextField fx:id="order_time" disable="true" editable="false" layoutX="383.0" layoutY="108.0" prefHeight="25.0" prefWidth="130.0" style="-fx-background-color: gray;">
                                  <font>
                                     <Font name="Lucida Sans Regular" size="13.0" />
                                  </font>
@@ -104,12 +104,12 @@
                                     <Font name="Lucida Sans Demibold" size="19.0" />
                                  </font>
                               </Text>
-                              <TextField fx:id="p_time" disable="true" editable="false" layoutX="394.0" layoutY="313.0" prefHeight="25.0" prefWidth="131.0" style="-fx-background-color: gray;">
+                              <TextField fx:id="payment_time" disable="true" editable="false" layoutX="394.0" layoutY="313.0" prefHeight="25.0" prefWidth="131.0" style="-fx-background-color: gray;">
                                  <font>
                                     <Font name="Lucida Sans Regular" size="13.0" />
                                  </font>
                               </TextField>
-                              <TextField fx:id="p_date" disable="true" editable="false" layoutX="394.0" layoutY="254.0" prefHeight="25.0" prefWidth="131.0" style="-fx-background-color: gray;">
+                              <TextField fx:id="payment_date" disable="true" editable="false" layoutX="394.0" layoutY="254.0" prefHeight="25.0" prefWidth="131.0" style="-fx-background-color: gray;">
                                  <font>
                                     <Font name="Lucida Sans Regular" size="13.0" />
                                  </font>
