--- a/src/com/pos/order/view/CreateOrderView.fxml
+++ b/src/com/pos/order/view/CreateOrderView.fxml
@@ -62,7 +62,7 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="amtPaidForPurchase" layoutX="107.0" layoutY="79.0" prefHeight="36.0" prefWidth="219.0" />
+                  <TextField fx:id="amtPaidForPurchase" layoutX="107.0" layoutY="79.0" onInputMethodTextChanged="#calculateTotalBalance" onKeyReleased="#calculateTotalBalance" prefHeight="36.0" prefWidth="219.0" />
                   <Label layoutX="14.0" layoutY="140.0" text="Balance:">
                      <font>
                         <Font size="15.0" />
