--- a/src/com/pos/order/view/CreateOrderView.fxml
+++ b/src/com/pos/order/view/CreateOrderView.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -33,12 +32,7 @@
       </AnchorPane>
       <Pane layoutX="12.0" layoutY="267.0" prefHeight="275.0" prefWidth="775.0">
          <children>
-            <TableView fx:id="purchaseListTbl" layoutX="2.0" layoutY="30.0" prefHeight="236.0" prefWidth="418.0">
-               <columns>
-                  <TableColumn prefWidth="75.0" text="C1" />
-                  <TableColumn prefWidth="75.0" text="C2" />
-               </columns>
-            </TableView>
+            <TableView fx:id="purchaseListTbl" layoutX="2.0" layoutY="30.0" onMouseClicked="#setSelectedPurchase" prefHeight="236.0" prefWidth="418.0" />
             <Label layoutX="4.0" layoutY="5.0" text="CART">
                <font>
                   <Font name="System Bold" size="15.0" />
